--- a/index3.html
+++ b/index3.html
@@ -13,6 +13,7 @@
             // ваш код
         }
         multiply(5, 10);
+        //начнем тестить
 
 
         // 2) Написать функцию которая принимает 3 параметра и возвращает найменьшее из них
