--- a/index3.html
+++ b/index3.html
@@ -18,72 +18,78 @@
         // 2) Написать функцию которая принимает 3 параметра и возвращает найменьшее из них
         function min(a, b, c) {
             let min = arguments[0];
-                for (let i = 1; i < arguments.length; i++) {
-                    if (arguments[i] < min) {
-                        min = arguments[i];
-                    }
+            for (let i = 1; i < arguments.length; i++) {
+                if (arguments[i] < min) {
+                    min = arguments[i];
                 }
-                return min;
             }
-            min(100, 33, 11);
+            return min;
+        }
+        min(100, 33, 11);
 
-            //3) Написать функцию которая 
-            //  -принимает массив, 
-            //  -сохраняет непарные числа в новый массив, 
-            //  -сортирует массив
-            // - и возвращает отсортированный массив
-            function sortOddNumbers(array) {
-                // ваш код
+        //3) Написать функцию которая 
+        //  -принимает массив, 
+        //  -сохраняет непарные числа в новый массив, 
+        //  -сортирует массив
+        // - и возвращает отсортированный массив
+        function sortOddNumbers(array) {
+            var newArray = [];
+            for (let i = array.length - 1; i >= 0; i--) {
+                newArray[newArray.length] = array[i];
             }
-            sortOddNumbers([2, 5, 3, 6, 9, 8, 10, 11])
+            var arrey1 = sortOddNumbers.sort();
+            return newArray;
+        }
+        sortOddNumbers([2, 5, 3, 6, 9, 8, 10, 11])
 
-            // 4) Написать функцию котороя принимает массив, и выводит новый массив из тех элементов которые кратны 5!!
-            function multipleOfFive(array) {
-                // ваш код
-            }
-            multipleOfFive([20, 5, 3, 23, 15, 8, 10, 11])
+        // 4) Написать функцию котороя принимает массив, и выводит новый массив из тех элементов которые кратны 5!!
+        function multipleOfFive(array) {
+            // ваш код
+        }
+        multipleOfFive([20, 5, 3, 23, 15, 8, 10, 11])
 
 
-            // 5) Написать функцию котороя принимает массив из строк, и возвращает кокатенацию из элементов первые символы которых
-            // совпадают с этой подстрокой 'jitb'. Используем  toLowerCase() и indexOf() методы  !!
-            function matchWithString(array) {
-                const str = 'jitb';
-                // ваш код
-            }
-            matchWithString(['Javascript', 'nice', 'coding', 'is', 'the', 'language', 'Best',
-            'worst']); // должно вывести javascript is the best
+        // 5) Написать функцию котороя принимает массив из строк, и возвращает кокатенацию из элементов первые символы которых
+        // совпадают с этой подстрокой 'jitb'. Используем  toLowerCase() и indexOf() методы  !!
+        function matchWithString(array) {
+            const str = 'jitb';
+            // ваш код
+        }
+        matchWithString(['Javascript', 'nice', 'coding', 'is', 'the', 'language', 'Best',
+            'worst'
+        ]); // должно вывести javascript is the best
 
-            // 6) Написать функцию котороя принимает строку и возвращает подстроку и количество таких подстрок в строке! 
-            function sameSubstring(str) {
-                // ваш код
-            }
-            sameSubstring('fdfdfdfd'); // рузльтат массив из ['fd', 4]
-            sameSubstring('xxxxxx'); // рузльтат массив из ['x', 6]
-            sameSubstring('xyzxyzxyz'); // рузльтат массив из ['xyz', 3]
+        // 6) Написать функцию котороя принимает строку и возвращает подстроку и количество таких подстрок в строке! 
+        function sameSubstring(str) {
+            // ваш код
+        }
+        sameSubstring('fdfdfdfd'); // рузльтат массив из ['fd', 4]
+        sameSubstring('xxxxxx'); // рузльтат массив из ['x', 6]
+        sameSubstring('xyzxyzxyz'); // рузльтат массив из ['xyz', 3]
 
-            // 7) Написать функцию которая перемножает числа от 5 до 10 через рекурсию!!!
-            function recursive(number) {
-                // ваш код
-            }
-            recursive(5);
+        // 7) Написать функцию которая перемножает числа от 5 до 10 через рекурсию!!!
+        function recursive(number) {
+            // ваш код
+        }
+        recursive(5);
 
-            // 8) Написать функцию котороя принимает число и проверяет простое ли число, если да то возвращает true иначе false!!
-            function isPrime(num) {
-                // ваш код
-            }
-            isPrime(7); // true
-            isPrime(6); // false
-            isPrime(9); // false
+        // 8) Написать функцию котороя принимает число и проверяет простое ли число, если да то возвращает true иначе false!!
+        function isPrime(num) {
+            // ваш код
+        }
+        isPrime(7); // true
+        isPrime(6); // false
+        isPrime(9); // false
 
-            // Advanced Решить эту задачу другим способом!! То есть реверс главной и побочной!
-            //  1
-            var arr = [
-                [1, 2, 3, 4],
-                [5, 6, 7, 8],
-                [9, 10, 11, 12],
-                [13, 14, 15, 16]
-            ];
-            // 2 Создать форму Имя, эмеил, пароль и кнопка send! По клику показать alert, что поля заполнены или наоборот!Можно двинутся дальше и реализовать pop-up а не alert!
+        // Advanced Решить эту задачу другим способом!! То есть реверс главной и побочной!
+        //  1
+        var arr = [
+            [1, 2, 3, 4],
+            [5, 6, 7, 8],
+            [9, 10, 11, 12],
+            [13, 14, 15, 16]
+        ];
+        // 2 Создать форму Имя, эмеил, пароль и кнопка send! По клику показать alert, что поля заполнены или наоборот!Можно двинутся дальше и реализовать pop-up а не alert!
     </script>
 </body>
 
